Fix sonar  issue