@@ -30,7 +30,6 @@ import uk.gov.moj.cpp.hearing.command.handler.service.validation.ResultsValidato
 import uk.gov.moj.cpp.hearing.command.handler.service.validation.ValidationRequest;
 import uk.gov.moj.cpp.hearing.command.handler.service.validation.ValidationRequestMapper;
 import uk.gov.moj.cpp.hearing.command.handler.service.validation.ValidationResponse;
-import uk.gov.moj.cpp.hearing.command.handler.service.validation.ValidationIssue;
 import uk.gov.moj.cpp.hearing.domain.aggregate.ApplicationAggregate;
 import uk.gov.moj.cpp.hearing.domain.aggregate.HearingAggregate;
 import uk.gov.moj.cpp.hearing.domain.event.result.ResultsValidationFailed;
@@ -201,7 +200,7 @@ public class ShareResultsCommandHandler extends AbstractCommandHandler {
         if (validationResponse.hasErrors()) {
             LOGGER.info("Share blocked by validation errors for hearing {}", command.getHearingId());
             final ResultsValidationFailed failedEvent = buildValidationFailedEvent(command, userIdString, validationResponse);
-                eventStream.append(Stream.of(failedEvent).map(enveloper.withMetadataFrom(envelope)));
+            eventStream.append(Stream.of(failedEvent).map(enveloper.withMetadataFrom(envelope)));
             return;
         }
 
@@ -257,15 +256,15 @@ public class ShareResultsCommandHandler extends AbstractCommandHandler {
                                 e.getRuleId(), e.getSeverity(), e.getMessage(),
                                 e.getAffectedOffences().stream()
                                         .map(o -> o.getId())
-                                        .collect(Collectors.toList())))
-                        .collect(Collectors.toList()))
+                                        .toList()))
+                        .toList())
                 .withWarnings(validationResponse.getWarnings().stream()
                         .map(w -> new ResultsValidationFailed.ValidationError(
                                 w.getRuleId(), w.getSeverity(), w.getMessage(),
                                 w.getAffectedOffences().stream()
                                         .map(o -> o.getId())
-                                        .collect(Collectors.toList())))
-                        .collect(Collectors.toList()))
+                                        .toList()))
+                        .toList())
                 .build();
     }
 
@@ -332,7 +331,7 @@ public class ShareResultsCommandHandler extends AbstractCommandHandler {
                     return null;
                 })
                 .filter(Objects::nonNull)
-                .collect(Collectors.toList());
+                .toList();
     }
 
 }
